--- a/exercícios/curso-Jonas-Schmedtmann/Forkify App/package.json
+++ b/exercícios/curso-Jonas-Schmedtmann/Forkify App/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "core-js": "^3.38.1",
+    "fracty": "^1.0.11",
     "regenerator-runtime": "^0.14.1",
     "sass": "^1.26.10"
   }
