ignore .parcel-cache

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 
 exercícios/curso-Jonas-Schmedtmann/Forkify App/.parcel-cache/data.mdb
+/exercícios/curso-Jonas-Schmedtmann/Forkify App/.parcel-cache
